made suggested changes

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 </head>
 
 <body>
-  <div id="container">
-    <div class="fluid_container">
+  <main>
+    <div class="container">
       <img class="img" src="images/image-qr-code.png" alt="QRCODE">
       <div class="text">
-        <p class="middle"><strong>
+        <h1><strong>
             Improve your front-end skills by building projects
           </strong>
 
-        </p>
+        </h1>
 
-        <p class="bottom"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <h3> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h3>
       </div>
 
     </div>
 
-    <div class="attribution">
+    <h5 class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Adetayo Adewobi</a>.
-    </div>
-  </div>
+      Coded by <a href="https://www.twitter.com/adewobiadetayo">Adetayo Adewobi</a>.
+    </h5>
+  </main>
 </body>
 
 
